[package]
name = "tls-cert-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gethostname = "0.4.3"
lazy_static = "1.4.0"
prometheus = "0.13.3"
rustls = "0.23.1"
tokio = { version = "1.36.0", features = ["rt-multi-thread","macros"] }
warp = "0.3.6"
webpki = "0.22.4"
webpki-roots = "0.26.1"
x509-parser = "0.16.0"
